samples/_failures_safe/1761043300_acf1e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2afe2e6b.c: In function ‘main’:
./samples/SAFE/__tmp_2afe2e6b.c:147:5: error: expected expression at end of input
  147 |     if (choice < 0 || choice >
      |     ^~
./samples/SAFE/__tmp_2afe2e6b.c:147:5: error: expected declaration or statement at end of input
